--- a/stayinbed.html
+++ b/stayinbed.html
@@ -5,10 +5,10 @@
 </head>
 
 <body>
-<p>Will you wake up or sleep?</p>
+<p>Will you wake up or keep sleeping?</p>
 <ul>
     <li><a href="wakeup.html">Wake up</a></li>
-    <li><a href="stayinbed.html">Keep sleeping</a></li>
+    <li><a href="stayinbed2.html">Keep sleeping</a></li>
     
 </ul>
     </body>
