--- a/stayinbed2.html
+++ b/stayinbed2.html
@@ -1,14 +1,12 @@
-
 <html>
 <head>
   <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
-<p>Take a nap?</p>
+<p>You were actually dead the whole time.</p>
 <ul>
-    <li><a href="tootired.html">Sure</a></li>
-    <li><a href="stayawake.html">Nah</a></li>
+    <li><a href="index.html">Restart?</a></li>
     
 </ul>
     </body>
