finished story and css

--- a/GoToTheCity.html
+++ b/GoToTheCity.html
@@ -1,13 +1,15 @@
 <html>
 <head>
   <link rel="stylesheet" href="style.css">
-</head>
+<img src="city.jpeg" alt="city" style="width:304px;height:228px;">
+
+    </head>
 
 <body>
     <p>What will you do?</p>
 <ul>
-    <li><a href="vote.html">Vote</a></li>
-    <li><a href=killurself.html>Kill Yourself</li>
+    <li><a href="toliet.html">Use the public toliet</a></li>
+    <li><a href=buystuff.html>Buy some stuff</li>
 </ul>
     </body>
     </html>
