--- a/exercise.html
+++ b/exercise.html
@@ -1,7 +1,9 @@
 <html>
 <head>
   <link rel="stylesheet" href="style.css">
-</head>
+<img src="skull" alt="skull" style="width:304px;height:228px;">
+
+    </head>
 
 <body>
 <p>You died. You don't exercise.</p>
