--- a/index.html
+++ b/index.html
@@ -1,10 +1,11 @@
 <html>
 <head>
   <link rel="stylesheet" href="style.css">
-</head>
 
-<body>
-<p>Will you wake up or sleep?</p>
+    </head>
+
+<body style="background-color:black;">
+    <p>Will you wake up or sleep?</p>
 <ul>
     <li><a href="wakeup.html">Wake up</a></li>
     <li><a href="stayinbed.html">Keep sleeping</a></li>
