--- a/portal.html
+++ b/portal.html
@@ -1,10 +1,12 @@
 <html>
 <head>
   <link rel="stylesheet" href="style.css">
-</head>
+<img src=skull.png alt="skull" style="width:304px;height:228px;">
+
+    </head>
 
 <body>
-<p>'You find yourself in Miineecraft(PLZ DON"T SUE ME) and a Ghhasst kills you.'</p>
+<p>'You were hallucinating and hit a wall'</p>
 <ul>
     <li><a href="index.html">Restart?</a></li>
     
