--- a/stayinbed2.html
+++ b/stayinbed2.html
@@ -1,9 +1,11 @@
 <html>
 <head>
   <link rel="stylesheet" href="style.css">
-</head>
+<img src="skull.png" alt="skull" style="width:304px;height:228px;">
 
-<body>
+    </head>
+
+<body style=background-color:black;>
 <p>You were actually dead the whole time.</p>
 <ul>
     <li><a href="index.html">Restart?</a></li>
