--- a/GoToThePark.html
+++ b/GoToThePark.html
@@ -2,7 +2,9 @@
 <html>
 <head>
   <link rel="stylesheet" href="style.css">
-</head>
+<img src="park.png" alt="park" style="width:304px;height:228px;">
+
+    </head>
 
 <body>
 <p>What will you do?</p>
