--- a/buystuff.html
+++ b/buystuff.html
@@ -1,12 +1,12 @@
 <html>
 <head>
   <link rel="stylesheet" href="style.css">
-<img src="skull.png" alt="skull" style="width:304px;height:228px;">
+<img src="wallet.png" alt="waller" style="width:304px;height:228px;">
 
     </head>
 
 <body>
-<p>What! A third option? NO! NO! KILL IT WITH FIRE!!! Oops, we killed you, with the dragon.</p>
+<p>You didn't bring any money.</p>
 <ul>
     <li><a href="index.html">Restart?</a></li>
     
