--- a/stayinbed.html
+++ b/stayinbed.html
@@ -2,9 +2,10 @@
 <html>
 <head>
   <link rel="stylesheet" href="style.css">
-</head>
 
-<body>
+    </head>
+
+<body style="background-color:black;">
 <p>Will you wake up or keep sleeping?</p>
 <ul>
     <li><a href="wakeup.html">Wake up</a></li>
