--- a/toliet.html
+++ b/toliet.html
@@ -6,7 +6,7 @@
     </head>
 
 <body>
-<p>What! A third option? NO! NO! KILL IT WITH FIRE!!! Oops, we killed you, with the dragon.</p>
+<p>You suffocated.</p>
 <ul>
     <li><a href="index.html">Restart?</a></li>
     
