--- a/portal.html
+++ b/portal.html
@@ -6,7 +6,7 @@
     </head>
 
 <body>
-<p>'You were hallucinating and hit a wall'</p>
+<p>'You were hallucinating and hit a wall.'</p>
 <ul>
     <li><a href="index.html">Restart?</a></li>
     
